@@ -16,6 +16,8 @@
  */
 package alfio.model.modification.support;
 
+import alfio.manager.system.ConfigurationManager;
+import alfio.model.system.ConfigurationKeyValuePathLevel;
 import alfio.model.system.ConfigurationKeys;
 import org.apache.commons.lang3.tuple.Pair;
 import org.junit.jupiter.api.Test;
@@ -32,26 +34,30 @@ public class LocationDescriptorTest {
     private final TimeZone timeZone = TimeZone.getDefault();
     private Function<String, LocationDescriptor> locationDescriptorBuilder = (mapUrl) -> new LocationDescriptor(timeZone.getID(), latitude, longitude, mapUrl);
 
+
+    private static ConfigurationManager.MaybeConfiguration buildMaybeConf(ConfigurationKeys k, String val) {
+        return new ConfigurationManager.MaybeConfiguration(k, new ConfigurationKeyValuePathLevel(k.name(), val, null));
+    }
+
     @Test
     public void testLocationDescriptorGoogle() {
-        Map<ConfigurationKeys, Optional<String>> geoInfo = Collections.singletonMap(ConfigurationKeys.MAPS_CLIENT_API_KEY, Optional.of("mapKey"));
+        var geoInfo = Map.of(ConfigurationKeys.MAPS_CLIENT_API_KEY, buildMaybeConf(ConfigurationKeys.MAPS_CLIENT_API_KEY, "mapKey"));
         final LocationDescriptor expected = locationDescriptorBuilder.apply("https://maps.googleapis.com/maps/api/staticmap?center=latitude,longitude&key=mapKey&zoom=16&size=400x400&markers=color:blue%7Clabel:E%7Clatitude,longitude");
         assertEquals(expected, LocationDescriptor.fromGeoData(Pair.of(latitude, longitude), timeZone, geoInfo));
     }
 
     @Test
     public void testLocationDescriptorNone() {
-        Map<ConfigurationKeys, Optional<String>> geoInfo = Collections.emptyMap();
+        Map<ConfigurationKeys, ConfigurationManager.MaybeConfiguration> geoInfo = Collections.emptyMap();
         final LocationDescriptor expected = locationDescriptorBuilder.apply("");
         assertEquals(expected, LocationDescriptor.fromGeoData(Pair.of(latitude, longitude), timeZone, geoInfo));
     }
 
     @Test
     public void testLocationDescriptorGoogleWithTypeSet() {
-        Map<ConfigurationKeys, Optional<String>> geoInfo = new HashMap<>();
-
-        geoInfo.put(ConfigurationKeys.MAPS_PROVIDER, Optional.of(ConfigurationKeys.GeoInfoProvider.GOOGLE.name()));
-        geoInfo.put(ConfigurationKeys.MAPS_CLIENT_API_KEY, Optional.of("mapKey"));
+        var geoInfo = Map.of(
+            ConfigurationKeys.MAPS_PROVIDER, buildMaybeConf(ConfigurationKeys.MAPS_PROVIDER, ConfigurationKeys.GeoInfoProvider.GOOGLE.name()),
+            ConfigurationKeys.MAPS_CLIENT_API_KEY, buildMaybeConf(ConfigurationKeys.MAPS_CLIENT_API_KEY, "mapKey"));
 
         final LocationDescriptor expected = locationDescriptorBuilder.apply("https://maps.googleapis.com/maps/api/staticmap?center=latitude,longitude&key=mapKey&zoom=16&size=400x400&markers=color:blue%7Clabel:E%7Clatitude,longitude");
         assertEquals(expected, LocationDescriptor.fromGeoData(Pair.of(latitude, longitude), timeZone, geoInfo));
@@ -59,10 +65,11 @@ public class LocationDescriptorTest {
 
     @Test
     public void testLocationDescriptorHEREWithTypeSet() {
-        Map<ConfigurationKeys, Optional<String>> geoInfo = new HashMap<>();
-        geoInfo.put(ConfigurationKeys.MAPS_PROVIDER, Optional.of(ConfigurationKeys.GeoInfoProvider.HERE.name()));
-        geoInfo.put(ConfigurationKeys.MAPS_HERE_APP_ID, Optional.of("appId"));
-        geoInfo.put(ConfigurationKeys.MAPS_HERE_APP_CODE, Optional.of("appCode"));
+        var geoInfo = Map.of(
+            ConfigurationKeys.MAPS_PROVIDER, buildMaybeConf(ConfigurationKeys.MAPS_PROVIDER, ConfigurationKeys.GeoInfoProvider.HERE.name()),
+            ConfigurationKeys.MAPS_HERE_APP_ID, buildMaybeConf(ConfigurationKeys.MAPS_HERE_APP_ID, "appId"),
+            ConfigurationKeys.MAPS_HERE_APP_CODE, buildMaybeConf(ConfigurationKeys.MAPS_HERE_APP_CODE, "appCode")
+        );
 
         final LocationDescriptor expected = locationDescriptorBuilder.apply("https://image.maps.api.here.com/mia/1.6/mapview?c=latitude,longitude&z=16&w=400&h=400&poi=latitude,longitude&app_id=appId&app_code=appCode");
         assertEquals(expected, LocationDescriptor.fromGeoData(Pair.of(latitude, longitude), timeZone, geoInfo));
@@ -70,8 +77,7 @@ public class LocationDescriptorTest {
 
     @Test
     public void testLocationDescriptorNONEWithTypeSet() {
-        Map<ConfigurationKeys, Optional<String>> geoInfo = new HashMap<>();
-        geoInfo.put(ConfigurationKeys.MAPS_PROVIDER, Optional.of(ConfigurationKeys.GeoInfoProvider.NONE.name()));
+        var geoInfo = Map.of(ConfigurationKeys.MAPS_PROVIDER, buildMaybeConf(ConfigurationKeys.MAPS_PROVIDER, ConfigurationKeys.GeoInfoProvider.NONE.name()));
         final LocationDescriptor expected = locationDescriptorBuilder.apply("");
         assertEquals(expected, LocationDescriptor.fromGeoData(Pair.of(latitude, longitude), timeZone, geoInfo));
     }
